<resources>
    <!--No changes-->
    <string name="app_name">UllApp</string>
    <string name="facebook_app_id">255716731452940</string>
    <!--Develop-->
    <!--<string name="facebook_login_url">http://192.168.1.100:8000/account/facebook/login/token/</string>
    <string name="google_login_url">http://192.168.1.100:8000/account/google/login/token/</string>
    <string name="service_url">http://192.168.1.100:8000/cv/</string>
    <string name="reserve_url">http://192.168.1.100:8000/cv/reservar</string>
    <string name="my_data_url">http://192.168.1.100:8000/cv/user_reserves</string>
    <string name="ya_reservadas_url">http://192.168.1.100:8000/cv/ya_reservadas</string>-->

    <!--Preproduction-->
    <string name="facebook_login_url">https://tfgserver.herokuapp.com/account/facebook/login/token/</string>
    <string name="google_login_url">https://tfgserver.herokuapp.com/account/google/login/token/</string>
    <string name="service_url">https://tfgserver.herokuapp.com/cv/</string>
    <string name="reserve_url">https://tfgserver.herokuapp.com/cv/reservar</string>
    <string name="my_data_url">https://tfgserver.herokuapp.com/cv/user_reserves</string>
    <string name="ya_reservadas_url">https://tfgserver.herokuapp.com/cv/ya_reservadas</string>

    <!--<string name="newsFeed">http://ddigital.webs.ull.es/feed/</string>
    <string name="newsFeed">http://ddigital.webs.ull.es/category/destacado/feed/</string>-->
    <string name="newsFeed">http://ddigital.webs.ull.es/feed/</string>

    <!--Placeholders-->
    <string name="username">Username</string>
    <string name="password">Password</string>
    <!--Navigation view-->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="user_info">Personal data</string>
    <string name="information">Information</string>
    <string name="directory">Directory</string>
    <string name="maps">Maps</string>
    <string name="parkings">Parkings</string>
    <string name="news">News</string>
    <string name="service">Services</string>
    <!--Buttons/actions-->
    <string name="action_login">Sign In</string>
    <string name="action_logout">Log Out</string>
    <string name="action_login_facebook">Log in with Facebook</string>
    <string name="action_logout_facebook">Log out from Facebook</string>
    <string name="action_login_google">Log in with Google</string>
    <string name="campus">Campus</string>
    <string name="act_news">News</string>
    <string name="action_reserve">Reserve</string>
    <string name="action_confirm">Confirm</string>
    <string name="action_cancel">Cancel</string>
    <!--Static text-->
    <string name="basic_access">Basic Access</string>
    <string name="user_access">User Access</string>
    <string name="title_activity_maps">Map</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
